search icon spacing fix

--- a/static/scss/common/base.scss
+++ b/static/scss/common/base.scss
@@ -152,7 +152,6 @@ body {
             cursor: pointer;
             position: absolute;
             left: 2px;
-            top: 2px;
             padding: 6.5px 10px;
         }
 
